--- a/package.json
+++ b/package.json
@@ -1,21 +1,36 @@
 {
-  "name": "webpack-test",
+  "name": "script-template",
   "version": "1.0.0",
-  "description": "",
+  "description": "GM Template for Scripts",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack --mode production",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "watch": "webpack --mode development --watch true"
   },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "filemanager-webpack-plugin": "^5.0.0",
-    "fs": "^0.0.1-security",
-    "webpack": "^5.37.0"
-  },
+  "license": "MIT",
+  "private": false,
   "dependencies": {
+    "@citizenfx/client": "^1.0.2792-1",
+    "@citizenfx/server": "^1.0.2792-1",
+    "@types/node": "^14.0.27",
+    "file-loader": "^6.2.0",
+    "fivem-js": "^1.5.2"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^3.8.0",
+    "@typescript-eslint/parser": "^2.34.0",
     "@vrpjs/client": "^1.0.4",
-    "@vrpjs/server": "^1.0.4"
+    "@vrpjs/server": "^1.0.4",
+    "eslint": "^7.6.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-loader": "^4.0.2",
+    "prettier": "^2.0.5",
+    "remove-files-webpack-plugin": "^1.4.3",
+    "ts-loader": "^8.0.2",
+    "typescript": "^3.9.7",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12"
   }
 }
